overflow fix

--- a/app/client/src/pages/admin/Components/CalenderList/Calendar.css
+++ b/app/client/src/pages/admin/Components/CalenderList/Calendar.css
@@ -116,7 +116,7 @@
 .deadline-date {
     font-size: 12px;
     opacity: 0.6;
-    margin-left:18px;
+    /*margin-left:18px;*/
     margin-top: 5px;
 }
 
